ALL | getFirst cannot find symbol?